# diffusers

./: .gitignore  .pylintrc  Makefile  README.md  main.py  pyproject.toml
scripts/: container.def  train.sh  train_icm.sh  utils.sh
src/: common.py  config.py  denoiser.py  diffusion.py  distributed.py  generator.py  model.py  sampling.py  schedule.py  timestep.py  trainer.py
src/cli/: ays.py  generate.py  train.py
src/config/: presets.py  types.py
src/equation/: __init__.py  base.py  differential.py  discrete.py
src/model/: __init__.py  base.py  edm.py  presets.py  unet.py
src/model/nvidia/: edm2.py
src/model/nvidia/torch_utils/: misc.py  persistence.py
src/schedule/: __init__.py  alpha.py  eta.py  hf.py  misc.py  sampling.py  sigma.py
src/schedule/sampling/: __init__.py  ays.py  base.py  edm.py  ets.py  ets.txt
src/solver/: __init__.py  base.py  continuous.py  discrete.py
src/train/: __init__.py  ema.py  lr_scheduler.py  trainer.py
