[project]
name = "diffusion-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diffusers>=0.35.2",
    "kaleido>=1.1.0",
    "loguru>=0.7.3",
    "plotly>=6.3.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "tqdm>=4.67.1",
]
