[project]
name = "diffusion-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.35.2",
    "kaleido>=1.1.0",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "plotly>=6.3.1",
    "torch==2.4.1+cu121",
    "torchvision==0.19.1+cu121",
    "tqdm>=4.67.1",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.10",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[tool.ty.src]
exclude = ["**/nvidia"]

[tool.ruff]
exclude = ["**/nvidia"]

[tool.ty.rules]
possibly-missing-attribute = "ignore"
